Working PT gradient parameterisation

--- a/DENIS_J0255/lnZ_to_sig.ipynb
+++ b/DENIS_J0255/lnZ_to_sig.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,25 +24,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "-0.7424283290747553\n",
+      "(0.4759567315084341, 1.1800679133017498) \n",
+      "\n",
       "4.943492065183818\n",
-      "(140.2591895905883, 3.593084600399843)\n",
+      "(140.2591895905883, 3.593084600399843) \n",
+      "\n",
       "415.8595274137333\n",
-      "(4.031790922174217e+180, 28.95906819346621)\n",
+      "(4.031790922174217e+180, 28.95906819346621) \n",
+      "\n",
       "263.2987400626298\n",
-      "(2.2345490967884168e+114, 23.08808369813444)\n",
+      "(2.2345490967884168e+114, 23.08808369813444) \n",
+      "\n",
       "29.116465417202562\n",
-      "(4416927423365.829, 7.914801875704641)\n",
+      "(4416927423365.829, 7.914801875704641) \n",
+      "\n",
       "2.44928961712867\n",
-      "(11.58011747950856, 2.733744063885033)\n",
+      "(11.58011747950856, 2.733744063885033) \n",
+      "\n",
       "314.97657774807885\n",
-      "(6.202826658952209e+136, 25.230732640657866)\n"
+      "(6.202826658952209e+136, 25.230732640657866) \n",
+      "\n"
      ]
     }
    ],
@@ -50,34 +59,41 @@
     "# Nominal\n",
     "ref = 0.114840334497538814E+07\n",
     "\n",
+    "# Nominal repeat\n",
+    "val = 0.114840408740371722E+07\n",
+    "print(Z_to_sigma(ref, val), '\\n')\n",
+    "###\n",
+    "#ref = val\n",
+    "###\n",
+    "\n",
     "# Dis-eq. chem. with Pquench\n",
     "val = 0.114839840148332296E+07\n",
-    "print(Z_to_sigma(ref, val))\n",
+    "print(Z_to_sigma(ref, val), '\\n')\n",
     "\n",
     "# Eq. chem. w/o Pquench\n",
     "val = 0.114798748544797441E+07\n",
-    "print(Z_to_sigma(ref, val))\n",
+    "print(Z_to_sigma(ref, val), '\\n')\n",
     "\n",
     "# w/o CH4\n",
     "val = 0.114814004623532551E+07\n",
-    "print(Z_to_sigma(ref, val))\n",
+    "print(Z_to_sigma(ref, val), '\\n')\n",
     "\n",
     "# w/o NH3\n",
     "val = 0.114837422850997094E+07\n",
-    "print(Z_to_sigma(ref, val))\n",
+    "print(Z_to_sigma(ref, val), '\\n')\n",
     "\n",
     "# w/o 13CO\n",
     "val = 0.114840089568577101E+07\n",
-    "print(Z_to_sigma(ref, val))\n",
+    "print(Z_to_sigma(ref, val), '\\n')\n",
     "\n",
     "# HITEMP H2O line list\n",
     "val = 0.114808836839764006E+07\n",
-    "print(Z_to_sigma(ref, val))"
+    "print(Z_to_sigma(ref, val), '\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
