--- a/DENIS_J0255/low_res_spectrum.ipynb
+++ b/DENIS_J0255/low_res_spectrum.ipynb
@@ -158,43 +158,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/sam/Documents/PhD/CRIRES_data_reduction/petitRADTRANS/petitRADTRANS/radtrans.py:113: FutureWarning: pRT_input_data_path was set by an environment variable. In a future update, the path to the petitRADTRANS input_data will be set within a .ini file that will be automatically generated into the user home directory (OS agnostic), inside a .petitradtrans directory\n",
-      "  warnings.warn(f\"pRT_input_data_path was set by an environment variable. In a future update, the path to \"\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Read line opacities of CO_12_HITEMP_R_300...\n",
-      " Done.\n",
-      "  Read line opacities of CO_13_HITEMP_R_300...\n",
-      " Done.\n",
-      "  Read line opacities of H2O_Exomol_R_300...\n",
-      " Done.\n",
-      "  Read line opacities of CH4_R_300...\n",
-      " Done.\n",
-      "  Read line opacities of NH3_R_300...\n",
-      " Done.\n",
-      "  Read line opacities of CO2_R_300...\n",
-      " Done.\n",
-      "  Read line opacities of HCN_R_300...\n",
-      " Done.\n",
-      "\n",
-      "  Read CIA opacities for H2-H2...\n",
-      "  Read CIA opacities for H2-He...\n",
-      "Done.\n",
-      "\n"
+      "Upper K_zz < 9.494e+08 cm s^-2\n",
+      "K_zz = 5.6e+10 +4.2e+10 -2.8e+10\n",
+      "t_chem = 2.4 +2.3 -0.9\n"
      ]
     }
    ],
+   "source": [
+    "import petitRADTRANS.poor_mans_nonequ_chem as pm\n",
+    "\n",
+    "def quench_carbon_chemistry(params, pressure, temperature):\n",
+    "\n",
+    "    CO = params['C/O']\n",
+    "    FeH = params['Fe/H']\n",
+    "    P_quench = params['P_quench']\n",
+    "    C_ratio = params['C_ratio']\n",
+    "\n",
+    "    pm_mass_fractions = pm.interpol_abundances(\n",
+    "        CO*np.ones_like(pressure), \n",
+    "        FeH*np.ones_like(pressure), \n",
+    "        temperature, \n",
+    "        pressure\n",
+    "        )\n",
+    "    \n",
+    "    mass_fractions = {\n",
+    "        'MMW': pm_mass_fractions['MMW'], \n",
+    "        }\n",
+    "\n",
+    "    return mass_fractions\n",
+    "\n",
+    "def K_zz(pressure, temperature, P_quench, mass_fractions, m, log_g, alpha=1):\n",
+    "    \n",
+    "    T_quench = np.interp(P_quench, pressure, temperature)\n",
+    "    MMW_quench = np.interp(P_quench, pressure, mass_fractions['MMW'])\n",
+    "\n",
+    "    def t_q1():\n",
+    "        return (1.5e-6) * (P_quench)**(-1) * (m)**(-0.7) * np.exp(42000/T_quench)\n",
+    "    \n",
+    "    def t_q2():\n",
+    "        return (40) * (P_quench)**(-2) * np.exp(25000/T_quench)\n",
+    "    \n",
+    "    # Zahnle & Marley (2014)\n",
+    "    t_chem = (1/t_q1() + 1/t_q2())**(-1)\n",
+    "    #print(t_chem)\n",
+    "\n",
+    "    # Mixing timescale matches chemical timescale at quench point\n",
+    "    t_mix = t_chem\n",
+    "\n",
+    "    # Scale height\n",
+    "    H = (nc.kB*T_quench / (MMW_quench*nc.amu*10**log_g))\n",
+    "\n",
+    "    # Mixing length scale\n",
+    "    L = alpha*H\n",
+    "\n",
+    "    # Vertical diffusion coefficient\n",
+    "    K_zz = L**2 / t_mix\n",
+    "\n",
+    "    return K_zz, t_chem\n",
+    "\n",
+    "upper_K_zz = 2.5e10 * (1400/600)**(8/3) * (1000/10**bestfit_params_2['params']['log_g'])\n",
+    "print('Upper K_zz < {:.3e} cm s^-2'.format(upper_K_zz))\n",
+    "\n",
+    "params = bestfit_params_2['params']\n",
+    "K_zz_posterior, t_chem_posterior = [], []\n",
+    "for i, sample_i in enumerate(posterior_2):\n",
+    "    \n",
+    "    params['R_p'] = sample_i[8]\n",
+    "    params['log_g'] = sample_i[9]\n",
+    "    params['epsilon_limb'] = sample_i[10]\n",
+    "    params['vsini'] = sample_i[11]\n",
+    "    params['rv'] = sample_i[12]\n",
+    "    \n",
+    "    params['opa_base_gray'] = 10**sample_i[13]\n",
+    "    params['P_base_gray'] = 10**sample_i[14]\n",
+    "    params['f_sed_gray'] = sample_i[15]\n",
+    "\n",
+    "    params['C/O'] = sample_i[16]\n",
+    "    params['Fe/H'] = sample_i[17]\n",
+    "    params['P_quench'] = 10**sample_i[18]\n",
+    "    params['C_ratio'] = 10**sample_i[19]\n",
+    "\n",
+    "    params['T_0'] = sample_i[21]\n",
+    "    params['T_1'] = sample_i[22]\n",
+    "    params['T_2'] = sample_i[23]\n",
+    "    params['T_3'] = sample_i[24]\n",
+    "    params['T_4'] = sample_i[25]\n",
+    "    params['T_5'] = sample_i[26]\n",
+    "    params['T_6'] = sample_i[27]\n",
+    "\n",
+    "    params['d_log_P_01'] = sample_i[28]\n",
+    "    params['log_P_knots'] = np.array([\n",
+    "        -6.0, \n",
+    "        2.0-params['d_log_P_45']-params['d_log_P_34']-params['d_log_P_23']-params['d_log_P_12']-params['d_log_P_01'], \n",
+    "        2.0-params['d_log_P_34']-params['d_log_P_23']-params['d_log_P_12']-params['d_log_P_01'], \n",
+    "        2.0-params['d_log_P_23']-params['d_log_P_12']-params['d_log_P_01'], \n",
+    "        2.0-params['d_log_P_12']-params['d_log_P_01'], \n",
+    "        2.0-params['d_log_P_01'], \n",
+    "        2.0\n",
+    "        ])\n",
+    "    params['P_knots'] = 10**params['log_P_knots']\n",
+    "    \n",
+    "    params['T_knots'] = np.array([\n",
+    "        params['T_6'], \n",
+    "        params['T_5'], \n",
+    "        params['T_4'], \n",
+    "        params['T_3'], \n",
+    "        params['T_2'], \n",
+    "        params['T_1'], \n",
+    "        #params['T_0'], \n",
+    "        ])\n",
+    "\n",
+    "    # Compute the PT profile\n",
+    "    temperature = PT_2(params)\n",
+    "\n",
+    "    #temperature *= 0.95\n",
+    "\n",
+    "    # Compute the VMR profiles\n",
+    "    mass_fractions = quench_carbon_chemistry(params, PT_2.pressure, temperature)\n",
+    "\n",
+    "    K_zz_i, t_chem_i = K_zz(\n",
+    "        PT_2.pressure, temperature, \n",
+    "        params['P_quench'], mass_fractions, m=1, \n",
+    "        log_g=params['log_g'], \n",
+    "        alpha=1\n",
+    "        )\n",
+    "    \n",
+    "    K_zz_posterior.append(K_zz_i)\n",
+    "    t_chem_posterior.append(t_chem_i)\n",
+    "\n",
+    "K_zz_posterior = np.array(K_zz_posterior)\n",
+    "t_chem_posterior = np.array(t_chem_posterior)\n",
+    "#print('K_zz = {:.3e} | {:.3e} | {:.3e}'.format(*np.percentile(K_zz_posterior, q=[16,50,84])))\n",
+    "\n",
+    "median = np.percentile(K_zz_posterior, q=50)\n",
+    "low  = np.percentile(K_zz_posterior, q=16) - median\n",
+    "high = np.percentile(K_zz_posterior, q=84) - median\n",
+    "print('K_zz = {:.1e} +{:.1e} {:.1e}'.format(median, high, low))\n",
+    "\n",
+    "median = np.percentile(t_chem_posterior, q=50)\n",
+    "low  = np.percentile(t_chem_posterior, q=16) - median\n",
+    "high = np.percentile(t_chem_posterior, q=84) - median\n",
+    "print('t_chem = {:.1f} +{:.1f} {:.1f}'.format(median, high, low))\n",
+    "#K_zz = K_zz(Chem_2, PT_2, 1, bestfit_params_2['params']['log_g'], alpha=0.1)\n",
+    "#print('K_zz = {:.3e} cm s^-2'.format(K_zz))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "pRT_atm = Radtrans(\n",
     "    line_species=[\n",
@@ -218,17 +338,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 3935/3935 [12:20<00:00,  5.32it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import petitRADTRANS.poor_mans_nonequ_chem as pm\n",
     "\n",
@@ -404,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,18 +572,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  analysing data from ./retrieval_outputs/DENIS_J0255_nominal_5/test_.txt\n",
-      "(4331, 32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "res = read_results(\n",
     "    prefix='./retrieval_outputs/DENIS_J0255_nominal_5/test_', n_params=32\n",
@@ -496,43 +599,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/sam/Documents/PhD/CRIRES_data_reduction/petitRADTRANS/petitRADTRANS/radtrans.py:113: FutureWarning: pRT_input_data_path was set by an environment variable. In a future update, the path to the petitRADTRANS input_data will be set within a .ini file that will be automatically generated into the user home directory (OS agnostic), inside a .petitradtrans directory\n",
-      "  warnings.warn(f\"pRT_input_data_path was set by an environment variable. In a future update, the path to \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Read line opacities of CO_12_HITEMP_R_300...\n",
-      " Done.\n",
-      "  Read line opacities of CO_13_HITEMP_R_300...\n",
-      " Done.\n",
-      "  Read line opacities of H2O_Exomol_R_300...\n",
-      " Done.\n",
-      "  Read line opacities of CH4_R_300...\n",
-      " Done.\n",
-      "  Read line opacities of NH3_R_300...\n",
-      " Done.\n",
-      "  Read line opacities of CO2_R_300...\n",
-      " Done.\n",
-      "  Read line opacities of HCN_R_300...\n",
-      " Done.\n",
-      "\n",
-      "  Read CIA opacities for H2-H2...\n",
-      "  Read CIA opacities for H2-He...\n",
-      "Done.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pRT_atm = Radtrans(\n",
     "    line_species=[\n",
@@ -554,17 +623,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4331/4331 [13:06<00:00,  5.51it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
     "\n",
@@ -679,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +811,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "posterior_color_1 = '#8B077C'\n",
+    "posterior_color_2 = '#075B56'\n",
+    "posterior_color_3 = '#C25617'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -776,26 +848,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1936.37919389 3061.09268427 4288.49804847]\n",
-      "[2887.64833852 3592.26013699 4385.81630914]\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
+     "data": {
+      "text/plain": [
+       "1.4119295968124635e+46"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "4*np.pi*(4.8679*3.086e18)**2 * (np.median(T_eff_posterior_1)**4 * (5.67051e-8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(np.quantile(T_eff_posterior_1, q=q)[2:5])\n",
     "print(np.quantile(T_eff_posterior_2, q=q)[2:5])"
@@ -803,13 +878,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "posterior_color_1 = '#8B077C'\n",
-    "posterior_color_2 = '#075B56'\n",
-    "posterior_color_3 = '#C25617'\n",
     "\n",
     "envelope_cmap = mpl.colors.LinearSegmentedColormap.from_list(\n",
     "    name='envelope_cmap', colors=[posterior_color_1, posterior_color_1], \n",
