New retrieval config + molecfit

--- a/Luhman_16/test.ipynb
+++ b/Luhman_16/test.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Read line opacities of K...\n",
+      "  Read line opacities of Na_allard...\n",
       " Done.\n",
       "\n"
      ]
@@ -194,12 +194,13 @@
     "#    lw=0.5, alpha=1\n",
     "#    )\n",
     "\n",
-    "#ax_opa.plot(\n",
-    "#    *opa_cross_sections(\n",
-    "#        'Na_allard', species_mass=23, T=1200, P=1, \n",
-    "#        ), \n",
-    "#    lw=0.5, alpha=1\n",
-    "#    )\n",
+    "ax_opa.plot(\n",
+    "    *opa_cross_sections(\n",
+    "        'Na_allard', species_mass=23, T=1200, P=10, \n",
+    "        wlen_bords_micron=[0.58,0.61], rv=0, vsini=1\n",
+    "        ), \n",
+    "    lw=0.5, alpha=1\n",
+    "    )\n",
     "\n",
     "#ax_opa.plot(\n",
     "#    *opa_cross_sections(\n",
@@ -208,17 +209,18 @@
     "#    lw=0.5, alpha=1\n",
     "#    )\n",
     "\n",
-    "ax_opa.plot(\n",
-    "    *opa_cross_sections(\n",
-    "        'K', species_mass=39, T=1200, P=1, \n",
-    "        #wlen_bords_micron=[0.6,1.3]\n",
-    "        wlen_bords_micron=[d_spec.wave.min()/1e3,d_spec.wave.max()/1e3], \n",
-    "        #wlen_bords_micron=[d_spec.wave[5].min()/1e3,d_spec.wave[5].max()/1e3], \n",
-    "        #wlen_bords_micron=[1.1,1.3]\n",
-    "        rv=0, vsini=1\n",
-    "        ), \n",
-    "    lw=0.5, alpha=1\n",
-    "    )\n",
+    "#ax_opa.plot(\n",
+    "#    *opa_cross_sections(\n",
+    "#        'K', species_mass=39, T=1200, P=1, \n",
+    "#        #wlen_bords_micron=[0.6,1.3]\n",
+    "#        #wlen_bords_micron=[d_spec.wave.min()/1e3,d_spec.wave.max()/1e3], \n",
+    "#        wlen_bords_micron=[0.6,1.3], \n",
+    "#        #wlen_bords_micron=[d_spec.wave[5].min()/1e3,d_spec.wave[5].max()/1e3], \n",
+    "#        #wlen_bords_micron=[1.1,1.3]\n",
+    "#        rv=0, vsini=1\n",
+    "#        ), \n",
+    "#    lw=0.5, alpha=1\n",
+    "#    )\n",
     "\n",
     "#ax_opa.plot(\n",
     "#    *opa_cross_sections(\n",
@@ -326,7 +328,7 @@
     "#        ), \n",
     "#    lw=0.5, alpha=1\n",
     "#    )\n",
-    "\n",
+    "'''\n",
     "#ax.axvline(1243.2274*1.0000834254)\n",
     "for line in [1.2436839, 1.2528860, 1.1692427, 1.1778406]:\n",
     "    break\n",
@@ -339,9 +341,11 @@
     "    #ax_opa.axvline(line/10, c='C2')\n",
     "    #ax_opa.axvline(line*1.0000834254/10, c='C2')\n",
     "    ax_opa.axvline(line*1.0003/10, c='C2')\n",
-    "\n",
+    "'''\n",
     "#ax_opa.set(xlim=(1165,1180))\n",
-    "ax_opa.set(xlim=(1200,1290))\n",
+    "#ax_opa.set(xlim=(1200,1290))\n",
+    "#ax_opa.set(xlim=(600,1290))\n",
+    "#ax_opa.set(xlim=(750,800))\n",
     "\n",
     "#ax.set(xlim=(d_spec.wave[0].min(), d_spec.wave[0].max()))\n",
     "#ax.set(xlim=(d_spec.wave[-3].min(), d_spec.wave[-3,1].max()))\n",
