Rosseland optical depths for K I lines

--- a/DENIS_J0255/retrieval_figures.ipynb
+++ b/DENIS_J0255/retrieval_figures.ipynb
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1926,18 +1926,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_239583/1141251978.py:97: RuntimeWarning: overflow encountered in power\n",
+      "/tmp/ipykernel_281217/422343909.py:101: RuntimeWarning: overflow encountered in power\n",
       "  [af.quantiles(10**posterior_1[:,i]/10**posterior_1[:,16], q=q) for i in range(posterior_1.shape[1])]\n",
       "/home/sam/Documents/PhD/CRIRES_data_reduction/crires_venv/lib/python3.10/site-packages/numpy/lib/function_base.py:4573: RuntimeWarning: invalid value encountered in subtract\n",
       "  diff_b_a = subtract(b, a)\n",
-      "/tmp/ipykernel_239583/1141251978.py:97: RuntimeWarning: overflow encountered in divide\n",
+      "/tmp/ipykernel_281217/422343909.py:101: RuntimeWarning: overflow encountered in divide\n",
       "  [af.quantiles(10**posterior_1[:,i]/10**posterior_1[:,16], q=q) for i in range(posterior_1.shape[1])]\n"
      ]
     },
@@ -1981,7 +1981,8 @@
     "def plot_VMR_profile(ax, pressure, chem, species, ec, ls=['--','--'], plot_unquenched=False, plot_unquenched_envelope=False, relative_to_12CO=True):\n",
     "\n",
     "    cmap = mpl.colors.LinearSegmentedColormap.from_list(\n",
-    "            'cmap', colors=['w', ec]\n",
+    "            #'cmap', colors=['w', ec]\n",
+    "            'cmap', colors=['none', ec]\n",
     "            )\n",
     "    fc = cmap(0.8)\n",
     "\n",
@@ -2009,7 +2010,8 @@
     "    else:\n",
     "        ls_1 = ls\n",
     "        ls_2 = ls\n",
-    "        \n",
+    "    \n",
+    "    '''\n",
     "    ax.plot(\n",
     "        envelope_X[3], pressure, c=ec, lw=1, ls=ls_1\n",
     "        )\n",
@@ -2017,7 +2019,8 @@
     "        y=pressure, x1=envelope_X[1], x2=envelope_X[-2], \n",
     "        fc=fc, alpha=0.3, ec='none', #ec=colors[i], ls='--'\n",
     "        )\n",
-    "\n",
+    "    '''\n",
+    "    \n",
     "    #print(line_species)\n",
     "    #print(chem.unquenched_mass_fractions_posterior.keys())\n",
     "    if hasattr(chem, 'P_quench') and plot_unquenched:\n",
@@ -2045,7 +2048,8 @@
     "        if plot_unquenched_envelope:\n",
     "            ax.fill_betweenx(\n",
     "                y=pressure, x1=unquenched_envelope_X[1], x2=unquenched_envelope_X[-2], \n",
-    "                fc=fc, alpha=0.3*0.5, ec='none', #ec=colors[i], ls='--'\n",
+    "                #fc=fc, alpha=0.3*0.5, ec='none', #ec=colors[i], ls='--'\n",
+    "                fc=fc, alpha=0.3, ec='none', #ec=colors[i], ls='--'\n",
     "                )\n",
     "\n",
     "q = np.array([0.5-0.997/2, 0.5-0.95/2, 0.5-0.68/2, 0.5, 0.5+0.68/2, 0.5+0.95/2, 0.5+0.997/2])\n",
@@ -2596,11 +2600,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(4,4))\n",
+    "fig, ax = plt.subplots(\n",
+    "    figsize=(4,4), facecolor='none'\n",
+    "    )\n",
     "\n",
     "colors = ['C2', 'C3', 'C4']#, 'C8', 'C5']\n",
     "labels = [r'$^{12}$CO', r'H$_2$O', r'CH$_4$']#, r'NH$_3$', r'$^{13}$CO']\n",
@@ -2608,7 +2614,8 @@
     "\n",
     "for color_i, label_i, species_i in zip(colors, labels, species):\n",
     "    plot_VMR_profile(\n",
-    "        ax, PT_2.pressure, Chem_2, species_i, ec=color_i, ls=['--',(0,(6,4))], \n",
+    "        ax, PT_2.pressure, Chem_2, species_i, ec=color_i, #ls=['--',(0,(6,4))], \n",
+    "        ls=['-','--'], \n",
     "        plot_unquenched=True, plot_unquenched_envelope=True, relative_to_12CO=False\n",
     "    )\n",
     "\n",
@@ -2643,6 +2650,7 @@
     "    va='center', ha='left', color=posterior_color_2, fontsize=9\n",
     ")\n",
     "\n",
+    "'''\n",
     "ax.plot(\n",
     "    [1e-10,1e-2], [median]*2, c=posterior_color_2, lw=1, ls='-'\n",
     "    )\n",
@@ -2650,6 +2658,7 @@
     "    x=[1e-10,1e-2], y1=[median-yerr[0]]*2, y2=[median+yerr[1]]*2, \n",
     "    fc=envelope_colors_2[2], alpha=0.3, ec='none', #ec=colors[i], ls='--'\n",
     "    )\n",
+    "'''\n",
     "\n",
     "#plot_PT_and_contr(ax_PT, ax_contr, PT_2, int_contr_em_2, envelope_colors_2, posterior_color_2, ls='--')\n",
     "ax_contr = ax.twiny()\n",
@@ -2664,18 +2673,37 @@
     "    )\n",
     "ax.invert_yaxis()\n",
     "\n",
+    "'''\n",
     "ax.legend(\n",
     "    loc='upper left', bbox_to_anchor=(0,0.95), \n",
     "    #handles=patches, \n",
     "    #framealpha=1, edgecolor='k', fancybox=False, \n",
     "    labelspacing=0.5, fontsize=9, handlelength=2.3, handleheight=0.9\n",
     "    )\n",
+    "'''\n",
     "\n",
     "l, r = 0.18, 0.96\n",
     "b, t = 0.12, 0.96\n",
     "fig.subplots_adjust(left=l, right=r, top=t, bottom=b, wspace=0, hspace=0)\n",
     "\n",
-    "fig.savefig('./plots/VMR_profiles.pdf')\n",
+    "#fig.savefig('./plots/VMR_profiles.pdf')\n",
+    "\n",
+    "color_axis = 'w'\n",
+    "for ax_i in [ax, ax_contr]:\n",
+    "    ax_i.set_facecolor('none')\n",
+    "    #ax_i.set_facecolor('k')\n",
+    "\n",
+    "    ax_i.spines['bottom'].set_color(color_axis)\n",
+    "    ax_i.spines['top'].set_color(color_axis)\n",
+    "    ax_i.spines['right'].set_color(color_axis)\n",
+    "    ax_i.spines['left'].set_color(color_axis)\n",
+    "\n",
+    "    ax_i.tick_params(axis='x', colors=color_axis, which='both')\n",
+    "    ax_i.tick_params(axis='y', colors=color_axis, which='both')\n",
+    "    ax_i.yaxis.label.set_color(color_axis)\n",
+    "    ax_i.xaxis.label.set_color(color_axis)\n",
+    "\n",
+    "fig.savefig('./plots/VMR_profiles.png', dpi=500)\n",
     "plt.close(fig)"
    ]
   },
