Updates to plotting-notebooks

--- a/DENIS_J0255/lnZ_to_sig.ipynb
+++ b/DENIS_J0255/lnZ_to_sig.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,34 @@
     "    #print \"n_sigma = \", sigma\n",
     "    print(ln_Z1-ln_Z2)\n",
     "    return B, sigma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29.99035929562524\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(10583944464670.346, 8.026058221984561)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ref = 0.111428771481441939E+07\n",
+    "Z_to_sigma(0.111431770517371502E+07, ref)"
    ]
   },
   {
