Incidence-angle integration

--- a/DENIS_J0255/lnZ_to_sig.ipynb
+++ b/DENIS_J0255/lnZ_to_sig.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,46 @@
     "    #print \"n_sigma = \", sigma\n",
     "    print(ln_Z1-ln_Z2)\n",
     "    return B, sigma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31.176371776033193\n",
+      "(34651834227888.09, 8.174563606126373)\n",
+      "34.54011640767567\n",
+      "(1001340910983251.6, 8.581431651594059)\n",
+      "31.83836621674709\n",
+      "(67177952158711.38, 8.256262371753786)\n",
+      "4.863407855387777\n",
+      "(129.46464799136388, 3.5691667222287853)\n"
+     ]
+    }
+   ],
+   "source": [
+    "_17 = 0.111431889118619543E+07\n",
+    "\n",
+    "_18 = 0.111428771481441939E+07\n",
+    "\n",
+    "_19 = 0.111432225493082707E+07\n",
+    "_20 = 0.111431955318063614E+07\n",
+    "print(Z_to_sigma(_17, _18))\n",
+    "print(Z_to_sigma(_19, _18))\n",
+    "print(Z_to_sigma(_20, _18))\n",
+    "_21 = 0.111431874134775251E+07\n",
+    "_22 = 0.111431770517371502E+07\n",
+    "#print(Z_to_sigma(_21, _20))\n",
+    "#print(Z_to_sigma(_22, _21))\n",
+    "\n",
+    "_23 = 0.884941608464246034E+06\n",
+    "_24 = 0.884936745056390646E+06\n",
+    "print(Z_to_sigma(_23, _24))"
    ]
   },
   {
