Improved get_scaling option

--- a/DENIS_J0255/lnZ_to_sig.ipynb
+++ b/DENIS_J0255/lnZ_to_sig.ipynb
@@ -24,6 +24,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.709417460253462\n",
+      "(49102350.34994804, 6.277609819674838)\n"
+     ]
+    }
+   ],
+   "source": [
+    "_34 = 0.111433994564124173E+07\n",
+    "_35 = 0.111435765505870199E+07\n",
+    "\n",
+    "print(Z_to_sigma(_35, _34))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
