Added notebook for presentation plots

--- a/Luhman_16/test.ipynb
+++ b/Luhman_16/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "\n",
     "import retrieval_base.auxiliary_functions as af\n",
     "\n",
-    "def read_results(prefix, n_params):\n",
+    "def read_results(prefix, n_params, w_set='K2166'):\n",
     "\n",
     "    # Set-up analyzer object\n",
     "    analyzer = pymultinest.Analyzer(\n",
@@ -38,19 +38,19 @@
     "    PT = af.pickle_load(prefix+'data/bestfit_PT.pkl')\n",
     "    Chem = af.pickle_load(prefix+'data/bestfit_Chem.pkl')\n",
     "\n",
-    "    m_spec = af.pickle_load(prefix+'data/bestfit_m_spec.pkl')\n",
-    "    d_spec = af.pickle_load(prefix+'data/d_spec.pkl')\n",
+    "    m_spec = af.pickle_load(prefix+f'data/bestfit_m_spec_{w_set}.pkl')\n",
+    "    d_spec = af.pickle_load(prefix+f'data/d_spec_{w_set}.pkl')\n",
     "\n",
-    "    LogLike = af.pickle_load(prefix+'data/bestfit_LogLike.pkl')\n",
+    "    LogLike = af.pickle_load(prefix+f'data/bestfit_LogLike_{w_set}.pkl')\n",
     "\n",
     "    try:\n",
-    "        Cov = af.pickle_load(prefix+'data/bestfit_Cov.pkl')\n",
+    "        Cov = af.pickle_load(prefix+f'data/bestfit_Cov_{w_set}.pkl')\n",
     "    except:\n",
     "        Cov = None\n",
     "\n",
-    "    int_contr_em           = np.load(prefix+'data/bestfit_int_contr_em.npy')\n",
-    "    int_contr_em_per_order = np.load(prefix+'data/bestfit_int_contr_em_per_order.npy')\n",
-    "    int_opa_cloud          = np.load(prefix+'data/bestfit_int_opa_cloud.npy')\n",
+    "    int_contr_em           = np.load(prefix+f'data/bestfit_int_contr_em_{w_set}.npy')\n",
+    "    int_contr_em_per_order = np.load(prefix+f'data/bestfit_int_contr_em_per_order_{w_set}.npy')\n",
+    "    int_opa_cloud          = np.load(prefix+f'data/bestfit_int_opa_cloud_{w_set}.npy')\n",
     "\n",
     "    f = open(prefix+'data/bestfit.json')\n",
     "    bestfit_params = json.load(f)\n",
@@ -62,15 +62,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  analysing data from ./retrieval_outputs/fiducial_J_B_ret_1/test_.txt\n",
-      "(2646, 31)\n"
+      "  analysing data from ./retrieval_outputs/fiducial_K_B_ret_29/test_.txt\n",
+      "(1814, 24)\n"
      ]
     }
    ],
@@ -78,14 +78,14 @@
     "res = read_results(\n",
     "    #prefix='./retrieval_outputs/order_6_ret_4/test_', n_params=36\n",
     "    #prefix='./retrieval_outputs/fiducial_J_A_ret_1/test_', n_params=31\n",
-    "    prefix='./retrieval_outputs/fiducial_J_B_ret_1/test_', n_params=31\n",
+    "    prefix='./retrieval_outputs/fiducial_K_B_ret_29/test_', n_params=24\n",
     ")\n",
     "posterior, bestfit, PT, Chem, _, _, _, m_spec, d_spec, LogLike, _, bestfit_params = res\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,14 +121,13 @@
     "    wave_even = np.linspace(wave.min(), wave.max(), wave.size)\n",
     "\n",
     "    opa_even = np.interp(wave_even, xp=wave, fp=opa)\n",
-    "    opa_rot_broad = pyasl.fastRotBroad(\n",
-    "        wave_even, opa_even, epsilon=epsilon_limb, vsini=vsini\n",
-    "        )\n",
-    "    opa_rot_broad = instr_broadening(wave_even, opa_rot_broad, out_res=out_res, in_res=1e6)\n",
-    "    \n",
-    "    ###\n",
-    "    opa_rot_broad = opa_even\n",
-    "    ###\n",
+    "    if vsini != 0:\n",
+    "        opa_rot_broad = pyasl.fastRotBroad(\n",
+    "            wave_even, opa_even, epsilon=epsilon_limb, vsini=vsini\n",
+    "            )\n",
+    "        opa_rot_broad = instr_broadening(wave_even, opa_rot_broad, out_res=out_res, in_res=1e6)\n",
+    "    else:\n",
+    "        opa_rot_broad = opa_even\n",
     "    \n",
     "    return wave_even, opa_rot_broad\n",
     "\n",
@@ -152,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/sam/Documents/PhD/CRIRES_data_reduction/petitRADTRANS/petitRADTRANS/radtrans.py:113: FutureWarning: pRT_input_data_path was set by an environment variable. In a future update, the path to the petitRADTRANS input_data will be set within a .ini file that will be automatically generated into the user home directory (OS agnostic), inside a .petitradtrans directory\n",
+      "/home/sam/Documents/PhD/petitRADTRANS/petitRADTRANS/radtrans.py:119: FutureWarning: pRT_input_data_path was set by an environment variable. In a future update, the path to the petitRADTRANS input_data will be set within a .ini file that will be automatically generated into the user home directory (OS agnostic), inside a .petitradtrans directory\n",
       "  warnings.warn(f\"pRT_input_data_path was set by an environment variable. In a future update, the path to \"\n"
      ]
     },
@@ -167,8 +166,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Read line opacities of Na_allard...\n",
-      " Done.\n",
+      "  Read line opacities of HF_main_iso...\n",
       "\n"
      ]
     }
@@ -181,6 +179,14 @@
     "        ax.plot(d_spec.wave[i,j,:], d_spec.flux[i,j,:] - LogLike.f[i,j]*m_spec.flux[i,j,:], c='k', lw=0.5)\n",
     "\n",
     "ax_opa = ax.twinx()\n",
+    "ax_opa.plot(\n",
+    "    *opa_cross_sections(\n",
+    "        'HF_main_iso', species_mass=20, T=1200, P=0.1, \n",
+    "        wlen_bords_micron=[2.25,2.5], rv=0, vsini=0\n",
+    "        ), \n",
+    "    lw=0.5, alpha=1\n",
+    "    )\n",
+    "\n",
     "#ax_opa.plot(\n",
     "#    *opa_cross_sections(\n",
     "#        'H2_12', species_mass=3, T=1200, P=1, \n",
@@ -194,13 +200,13 @@
     "#    lw=0.5, alpha=1\n",
     "#    )\n",
     "\n",
-    "ax_opa.plot(\n",
-    "    *opa_cross_sections(\n",
-    "        'Na_allard', species_mass=23, T=1200, P=10, \n",
-    "        wlen_bords_micron=[0.58,0.61], rv=0, vsini=1\n",
-    "        ), \n",
-    "    lw=0.5, alpha=1\n",
-    "    )\n",
+    "#ax_opa.plot(\n",
+    "#    *opa_cross_sections(\n",
+    "#        'Na_allard', species_mass=23, T=1200, P=10, \n",
+    "#        wlen_bords_micron=[0.58,0.61], rv=0, vsini=1\n",
+    "#        ), \n",
+    "#    lw=0.5, alpha=1\n",
+    "#    )\n",
     "\n",
     "#ax_opa.plot(\n",
     "#    *opa_cross_sections(\n",
@@ -349,8 +355,13 @@
     "\n",
     "#ax.set(xlim=(d_spec.wave[0].min(), d_spec.wave[0].max()))\n",
     "#ax.set(xlim=(d_spec.wave[-3].min(), d_spec.wave[-3,1].max()))\n",
-    "ax_opa.set_yscale('log')\n",
-    "plt.savefig('./plots/opa_cross_sec.pdf')\n",
+    "ax_opa.set_yscale('log'); ax_opa.set_ylim(1e-25,1e-16)\n",
+    "#ax_opa.tick_params(axis='x', which='minor', bottom=False)\n",
+    "import matplotlib.ticker as tck\n",
+    "ax_opa.xaxis.set_minor_locator(tck.AutoMinorLocator())\n",
+    "\n",
+    "#plt.savefig('./plots/opa_cross_sec.pdf')\n",
+    "plt.savefig('./plots/HF_opacities.pdf')\n",
     "#plt.show()\n",
     "plt.close()"
    ]
