New figure notebooks

--- a/DENIS_J0255/lnZ_to_sig.ipynb
+++ b/DENIS_J0255/lnZ_to_sig.ipynb
@@ -182,6 +182,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.166160662425682\n",
+      "(64.4674640001398, 3.3526979146474125)\n",
+      "12.141881141578779\n",
+      "(187565.07701317596, 5.288554061559566)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dis-eq. chem. with Pquench\n",
+    "#val = 0.114839430177989323E+07\n",
+    "val = 0.114839917881472572E+07\n",
+    "ref = 0.114840334497538814E+07\n",
+    "print(Z_to_sigma(ref, val))\n",
+    "\n",
+    "# Dis-eq. chem. with Kzz\n",
+    "#val = 0.114839996508847852E+07\n",
+    "val = 0.114839120309424656E+07\n",
+    "ref = 0.114840334497538814E+07\n",
+    "print(Z_to_sigma(ref, val))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
